<resources>

    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="app_name">  LastingSales</string>
    <string name="mixpanel_key">347487b41c2e70ed4dcef0f8454ad710</string>
    <string name="title_activity_splash">LastingSales</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nameOfUser">Lorem Ipsum</string>
    <string name="viewPublicProfile">View public profile</string>
    <string name="followUps">Followups</string>
    <string name="notifications">Notifications</string>
    <string name="about">About</string>
    <string name="popup_title_add_new_reminder">Add New Reminder</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="change">Change</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="note_title">Note</string>
    <string name="select_contact">Select Contact</string>
    <string name="number">Number</string>
    <string name="name">Name</string>
    <string name="followups_capital">FOLLOWUPS</string>
    <string name="notes">Notes</string>
    <string name="save">Save</string>
    <string name="followup_capital">FOLLOW UP</string>
    <string name="close">Close</string>
    <string name="open">Open</string>
    <string name="email">Email</string>
    <string name="number2">Number 2</string>
    <string name="description">Description</string>
    <string name="company">Company</string>
    <string name="address">Address</string>
    <string name="type">Type</string>
    <!--        UIOCALL popup stuff-->
    <string name="rating_prompt_string">Please rate your experience!</string>
    <string name="please_tag_this_call">Please Tag This Call</string>
    <!--UIOCALL popup stuff ends here-->
    <string name="action_settings">Settings</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="funnel_hint">Filter</string>
    <string name="calls">Calls</string>
    <string name="status">Status</string>
    <string name="details">Details</string>
    <string name="reminder">Reminder</string>
    <string name="please_add_followup_to_this_call">Please Add Follow Up</string>
    <string name="followUp">Follow Up</string>
    <string name="collegue">COLLEGUE</string>
    <string name="non_busin">NON-BUSIN</string>
    <string name="sales">SALES</string>
    <string name="add_contact">ADD CONTACT</string>
    <string name="import_btn">IMPORT</string>
    <string name="contact_name">NAME*</string>
    <string name="contact_phone">PHONE*</string>
    <string name="loremipsun">LoremIpsun</string>
    <string name="lorem_ipsum_com">Lorem@Ipsum.com</string>
    <string name="loremipsum_profile_pic">Loremipsum Profile Pic</string>
    <string name="next_followup_capital">NEXT FOLLOW UP</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="three_days">3 Days</string>
    <string name="one_week">1 Week</string>
    <string name="add_followup">Add Followup</string>
    <string name="add_note">Add note</string>
    <string name="navigation_drawer_title_calls">Calls</string>
    <string name="navigation_drawer_title_contacts">Contacts</string>
    <string name="navigation_drawer_incoming">Calls</string>
    <string name="navigation_drawer_outgoing">Outgoing</string>
    <string name="navigation_drawer_colleague">Colleague Contacts</string>
    <string name="navigation_drawer_unlabeled">Unlabeled Contacts</string>
    <string name="navigation_drawer_non_business">Ignored Contacts</string>
    <string name="add_new_contact">Add New Contact</string>
    <string name="title">Title</string>
    <string name="non_busines_capital">IGNORE</string>
    <string name="colleague_capital">COLLEAGUE</string>
    <string name="salesCapital">Make Lead</string>
    <string name="connections">Connections</string>
    <!--        TAB NAMES-->
    <string name="tab_home">Home</string>
    <string name="tab_inquiries">Inquiries</string>
    <string name="tab_sales">Sales</string>
    <string name="unknown_capital">UNKNOWN</string>
    <string name="refresh">Refresh</string>
    <string name="log_out">Log Out</string>

    <string name="title_main_activity">Firebase Notifications</string>
    <string name="lead_picture">lead Picture</string>
    <string name="delights_of_leads">Delights of Leads</string>
    <string name="em_inprogress_delight">Nothing in InProgress</string>
    <string name="em_won_delight">Nothing in Won</string>
    <string name="em_inactive_delight">Nothing in InActive</string>
    <string name="em_lost_delight">Nothing in Lost</string>
    <string name="em_notes_delight">Nothing in Notes</string>
    <string name="em_inquiries_delight">Nothing in Inquiries</string>
    <string name="em_unlabeled_delight">Nothing in Unlabeled</string>
    <string name="em_all_delight">Nothing in Leads</string>
    <string name="em_ignored_delight">Ignored Contacts are your Friend and Family contacts. They are not Tracked!</string>
    <string name="em_business_delight">Business Contacts are people who are not your customers!</string>
    <string name="lead_details">Lead Details</string>
    <string name="deal_details">Deal Details</string>
    <string name="details_button">DETAILS</string>


    <string name="onstoptask">onStopTask</string>
    <string name="onstarttask">onStartTask</string>
    <string name="defaultparamtext">task params will show up here.</string>
    <string name="schedule_job_button_text">Schedule Job</string>
    <string name="cancel_all_jobs_button_text">Cancel all</string>
    <string name="finish_job_button_text">Finish last task</string>
    <string name="idle_mode_text">Requires device in idle mode.</string>
    <string name="charging_caption">Charging:</string>
    <string name="charging_text">Requires device plugged in.</string>
    <string name="idle_caption">Idle:</string>
    <string name="connectivity">Connectivity:</string>
    <string name="any">Any</string>
    <string name="unmetered">WiFi</string>
    <string name="timing">Timing:</string>
    <string name="delay">Delay:</string>
    <string name="deadline">Deadline:</string>
    <string name="work_duration">Work duration:</string>
    <string name="cancelled_job">Cancelled job %d</string>
    <string name="no_jobs_to_cancel">No jobs to cancel</string>
    <string name="all_jobs_cancelled">All jobs cancelled</string>

    <string name="google_card_background_color">#F2F2F2</string>
    <string name="google_card_color">#FFFFFF</string>
    <string name="navigation_tasks">Tasks</string>
    <string name="navigation_inquiries">Inquiries</string>
    <string name="navigation_unlabeled">Unlabeled</string>
    <string name="navigation_leads">Leads</string>
    <string name="navigation_deals">Deals</string>
    <string name="navigation_more">More</string>
    <string name="account_setting"><![CDATA[account & setting]]></string>

    <string name="message_zoom_touch_expand">Touch a photo to expand it.</string>

    <!-- Accessibility-only descriptions -->
    <string name="description_image_1">Image 1</string>
    <string name="description_image_2">Image 2</string>
    <string name="description_zoom_touch_close">Expanded image (touch to close)</string>

</resources>
