<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!--<item-->
        <!--android:id="@+id/navigation_tasks"-->
        <!--android:icon="@drawable/ic_event_note_black_24dp"-->
        <!--android:title="@string/navigation_tasks" />-->
    <item
        android:id="@+id/navigation_inquiries"
        android:icon="@drawable/ic_phone_missed_black_24dp"
        android:title="@string/navigation_inquiries" />

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/navigation_unlabeled" />

    <item
        android:id="@+id/navigation_leads"
        android:icon="@drawable/ic_people_black_24dp"
        android:title="@string/navigation_leads" />

    <item
        android:id="@+id/navigation_deals"
        android:icon="@drawable/ic_deal"
        android:title="@string/navigation_deals" />

    <item
        android:id="@+id/navigation_more"
        android:icon="@drawable/ic_more_horiz_black_24dp"
        android:title="@string/navigation_more" />

</menu>
