<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="260dp"
        android:layout_margin="8dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvTitleFollowupPopup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/popup_title_add_new_reminder"
            android:textSize="22sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/etTitleTextFollowupPopup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:maxLines="3"
                android:padding="8dp"
                android:textSize="14sp"
                tools:text="+92 301 4775234" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bTomorrowFollowupPopup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:padding="8dp"
                android:text="@string/tomorrow"
                android:textSize="14sp"
                />

            <Button
                android:id="@+id/bThreeDaysFollowupPopup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:padding="8dp"
                android:text="@string/three_days"
                android:textSize="14sp"
                />

            <Button
                android:id="@+id/bOneWeekFollowupPopup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:padding="8dp"
                android:text="@string/one_week"
                android:textSize="14sp"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bDateFollowupPopup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:padding="8dp"
                android:text="09-12-16"
                android:textSize="14sp"
                />

            <Button
                android:id="@+id/bTimeFollowupPopup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"

                android:padding="8dp"
                android:text="01:00 PM "
                android:textSize="14sp" />

        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_weight="2"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bCancelFollowup"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:padding="0dp"
            android:radius="5dip"
            android:text="@string/cancel"
            android:textColor="#ffffff"
            android:textSize="15sp" />

        <Button
            android:id="@+id/bSaveFollowup"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="4dp"
            android:layout_weight="1"
            android:padding="0dp"
            android:radius="5dip"
            android:text="@string/save"
            android:textColor="#ffffff"
            android:textSize="15sp" />

    </LinearLayout>

</LinearLayout>