<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title"
                />

            <EditText
                android:id="@+id/etFollowupTitleText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:maxLines="3"
                tools:text="+92 301 4775234" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bTomorrowFollowupPopup"
                style="@style/Widget.AppCompat.Button.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:text="@string/tomorrow" />

            <Button
                android:id="@+id/bThreeDaysFollowupPopup"
                style="@style/Widget.AppCompat.Button.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:text="@string/three_days" />

            <Button
                android:id="@+id/bOneWeekFollowupPopup"
                style="@style/Widget.AppCompat.Button.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:text="@string/one_week" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:orientation="horizontal"
            android:layout_marginStart="8dp">

            <Button
                android:id="@+id/bDateFollowupPopup"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:background="@drawable/btn_transparent_black_border"
                android:layout_margin="4dp"
                android:text="09-12-16" />

            <Button
                android:id="@+id/bTimeFollowupPopup"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:background="@drawable/btn_transparent_black_border"
                android:layout_margin="4dp"
                android:text="01:00 PM " />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bCancelFollowup"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:background="@drawable/btn_transparent_black_border"
                android:layout_width="wrap_content"
                android:layout_height="38dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:text="@string/cancel"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="8dp" />

            <Button
                android:id="@+id/bSaveFollowup"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="4dp"
                android:layout_weight="1"
                android:text="@string/save"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="4dp" />

        </LinearLayout>

    </LinearLayout>




</LinearLayout>