<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:background="@color/lightGray"

    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="@color/white"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        >

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/temp_avatar"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:layout_marginLeft="@dimen/list_text_margin_left"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nameOfUser"
                android:id="@+id/nameOfUserMoreScreen"
                android:textSize="15dp"
                android:textStyle="bold"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/viewPublicProfile"
                android:id="@+id/ViewPublicProfile"
                android:textSize="12dp"
                />


        </LinearLayout>


    </LinearLayout>

    <!--top picture bar ends here-->


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginTop="20dp"

    android:background="@color/white"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal"
        android:id="@+id/llFollowUpsMoreScreen"
        android:clickable="true"

        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/followUps"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/list_text_margin_left"
            android:textSize="12dp"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/lightGray"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal"
        android:id="@+id/llNotesMoreFragment"

        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notes"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/list_text_margin_left"
            android:textSize="12dp"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/lightGray"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal"

        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/list_text_margin_left"
            android:textSize="12dp"
            />

    </LinearLayout>



</LinearLayout>

<!-- First set of options end here-->


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginTop="20dp"

    android:background="@color/white"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal"

        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Basic Settings"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/list_text_margin_left"
            android:textSize="12dp"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/lightGray"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal"
        android:id="@+id/llLogOutMoreScreen"

        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Log Out"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/list_text_margin_left"
            android:textSize="12dp"
            />

    </LinearLayout>


</LinearLayout>

<!-- 2nd set of options end here-->



    </LinearLayout>