<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:background="@drawable/shape_borders_rounded_corners_primary_color_white_fill"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="horizontal"
            >

            <Button
                android:id="@+id/bTomorrowFollowupPopup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:padding="8dp"
                android:text="@string/tomorrow"
                android:textSize="14sp"
                />

            <Button
                android:id="@+id/bThreeDaysFollowupPopup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:padding="8dp"
                android:text="@string/three_days"
                android:textSize="14sp"
                />

            <Button
                android:id="@+id/bOneWeekFollowupPopup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:padding="8dp"
                android:text="@string/one_week"
                android:textSize="14sp"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:orientation="horizontal"
            >

            <Button
                android:id="@+id/bDateFollowupPopup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:padding="8dp"
                android:text="09-12-16"
                android:textSize="14sp"
                />

            <Button
                android:id="@+id/bTimeFollowupPopup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:padding="8dp"
                android:text="01:00 PM "
                android:textSize="14sp"
                />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>